fixed bug of flexbox on mobile nav

--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -381,12 +381,7 @@
 	}
 
 	ul.nav.nav-tabs.navbar-site {
+		display: flex;
 		flex-direction: column;
-	}
-	
-	#navbar_com_liferay_site_navigation_menu_web_portlet_SiteNavigationMenuPortlet {
-		ul {
-			flex-direction: column;
-		}
 	}
 }
